--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,33 @@
 # packages in environment at C:\Users\Ben Pickers\Anaconda3\envs\cwbenv:
 #
-# Name                    Version                   Build  Channel
-ca-certificates           2021.10.8            h5b45459_0    conda-forge
-certifi                   2021.10.8        py37h03978a9_1    conda-forge
-django                    2.1                      py37_0  
-django-pyodbc-azure       2.1.0.0            pyhd3eb1b0_0  
-openssl                   3.0.0                h8ffe710_2    conda-forge
-pip                       21.3.1             pyhd8ed1ab_0    conda-forge
-pyodbc                    4.0.32           py37hf2a7229_1    conda-forge
-python                    3.7.12          h900ac77_100_cpython    conda-forge
-python_abi                3.7                     2_cp37m    conda-forge
-pytz                      2021.3             pyhd3eb1b0_0  
-setuptools                58.5.3           py37h03978a9_0    conda-forge
-sqlite                    3.36.0               h2bbff1b_0  
-vc                        14.2                 h21ff451_1  
-vs2015_runtime            14.27.29016          h5e58377_2  
-wheel                     0.37.0             pyhd3eb1b0_1  
+# Name                    Version
+blas==1.0
+bottleneck==1.3.2
+ca-certificates==2021.10.26
+certifi==2021.10.8
+django==2.1
+django-pyodbc-azure==2.1.0.0
+et_xmlfile==1.1.0
+intel-openmp==2021.4.0
+mkl==2021.4.0
+mkl-service==2.4.0
+mkl_fft==1.3.1
+mkl_random==1.2.2
+numexpr==2.7.3
+numpy==1.21.2
+numpy-base==1.21.2
+openpyxl==3.0.9
+openssl==3.0.0
+pandas==1.3.4
+pip==21.3.1
+pyodbc==4.0.32
+python==3.7.12
+python-dateutil==2.8.2
+python_abi==3.7
+pytz==2021.3
+setuptools==58.5.3
+six==1.16.0
+sqlite==3.36.0
+vc==14.2
+vs2015_runtime==14.27.29016
+wheel==0.37.0  
